Update popup.html - Changed the layout of the popup to display the selected text.

--- a/extension/single-chrome/popup.html
+++ b/extension/single-chrome/popup.html
@@ -5,9 +5,13 @@
   </head>
   <body>
     <div class="center">
-    <button id="scrapeContent">Scrape Content</button>
+    <button id="getContent">Get selected content</button>
     <ul id="contentList"></ul></ul>
-    <script src="popup.js"></script>
     </div>
+	<div class="center">
+		<h2>Selected Text</h2>
+		<h3 id="displayText"></h3>
+		</div>
+   <script src="popup.js"></script>
   </body>
 </html>
