Update popup.html - Wrote UI to display the results from ML model

--- a/extension/single-chrome/popup.html
+++ b/extension/single-chrome/popup.html
@@ -11,7 +11,16 @@
 	<div class="center">
 		<h2>Selected Text</h2>
 		<h3 id="displayText"></h3>
-		</div>
+	</div>
+	<div class="center">
+		<textarea id="reasons">Enter why do you think this news is fake?</textarea>
+	</div>
+	<div class="center">
+		<button id="submit">Submit</button>
+	</div>
+  <div class="center">
+    <h3 id="resultDisplay"></h3>
+  </div>
    <script src="popup.js"></script>
   </body>
 </html>
