--- a/extension/single-chrome/popup.html
+++ b/extension/single-chrome/popup.html
@@ -5,9 +5,33 @@
   </head>
   <body>
     <div class="center">
-    <button id="scrapeContent">Scrape Content</button>
+    <button id="getContent">Get selected content</button>
     <ul id="contentList"></ul></ul>
-    <script src="popup.js"></script>
     </div>
+	<div class="center">
+		<h2>Selected Text</h2>
+		<h3 id="displayText"></h3>
+	</div>
+  <div class="center">
+    <h4>Enter your reasons for thinking that this news is fake?</h2>
+  </div>
+	<div class="center">
+		<textarea id="reasons"></textarea>
+	</div>
+  <div class="center">
+    <h4>Enter any links to back up your claims</h4>
+    <textarea id="proofURL"></textarea>
+  </div>
+  <div class="center">
+    <input type="range" id="confidence" name="confidence" min="1" max="100"/>
+    <label for="confidence">Confidence in your belief that this information is fake</label>
+  </div>
+	<div class="center">
+		<button id="submit">Submit</button>
+	</div>
+  <div class="center">
+    <h3 id="resultDisplay"></h3>
+  </div>
+   <script src="popup.js"></script>
   </body>
 </html>
